// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`string > applies string checkers 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/StringSchema",
    "definitions": {
        "StringSchema": {
            "type": "string",
            "minLength": 2,
            "pattern": "^[a-z]+$"
        }
    }
}"
`;

exports[`string > coerce on input 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/StringSchema",
    "definitions": {
        "StringSchema": {
            "type": [
                "string",
                "number",
                "boolean",
                "null"
            ]
        }
    }
}"
`;

exports[`string > handles email and ignores unknown checker 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/StringEmailSchema",
    "definitions": {
        "StringEmailSchema": {
            "type": "string",
            "format": "email",
            "pattern": "^(?!\\\\.)(?!.*\\\\.\\\\.)([A-Za-z0-9_'+\\\\-.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9-]*\\\\.)+[A-Za-z]{2,}$"
        }
    }
}"
`;

exports[`string > handles url and max 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/StringUrlSchema",
    "definitions": {
        "StringUrlSchema": {
            "type": "string",
            "maxLength": 10,
            "format": "uri"
        }
    }
}"
`;
